[core] Support zygisk (#1228)
Co-authored-by: 南宫雪珊 <vvb2060@gmail.com>
Co-authored-by: tehcneko <88844448+tehcneko@users.noreply.github.com>

--- a/app/src/main/res/menu/menu_app_list.xml
+++ b/app/src/main/res/menu/menu_app_list.xml
@@ -58,6 +58,12 @@
                 android:checkable="true"
                 android:checked="true"
                 android:title="@string/menu_show_system_apps" />
+
+            <item
+                android:id="@+id/item_filter_denylist"
+                android:checkable="true"
+                android:checked="true"
+                android:title="@string/menu_show_denylist" />
         </menu>
     </item>
 
