--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -84,4 +84,16 @@
         <item>@string/color_blue_grey</item>
     </string-array>
 
+    <string-array name="update_channel_texts" translatable="false">
+        <item>@string/update_channel_stable</item>
+        <item>@string/update_channel_bate</item>
+        <item>@string/update_channel_nightly</item>
+    </string-array>
+
+    <string-array name="update_channel_values" translatable="false">
+        <item>CHANNEL_STABLE</item>
+        <item>CHANNEL_BETA</item>
+        <item>CHANNEL_NIGHTLY</item>
+    </string-array>
+
 </resources>
