--- a/app/src/main/res/menu/menu_logs.xml
+++ b/app/src/main/res/menu/menu_logs.xml
@@ -18,33 +18,37 @@
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/menu_save"
         android:icon="@drawable/ic_save"
-        android:title="@string/menuSaveToSd"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom"
+        android:title="@string/menuSaveToSd" />
 
     <item
         android:id="@+id/menu_refresh"
         android:icon="@drawable/ic_refresh"
-        android:title="@string/menuReload"
-        app:showAsAction="ifRoom" />
+        android:showAsAction="ifRoom"
+        android:title="@string/menuReload" />
 
     <item
         android:id="@+id/menu_scroll_top"
-        android:title="@string/scroll_top"
-        app:showAsAction="never" />
+        android:showAsAction="never"
+        android:title="@string/scroll_top" />
 
     <item
         android:id="@+id/menu_scroll_down"
-        android:title="@string/scroll_bottom"
-        app:showAsAction="never" />
+        android:showAsAction="never"
+        android:title="@string/scroll_bottom" />
 
     <item
         android:id="@+id/menu_clear"
-        android:title="@string/menuClearLog"
-        app:showAsAction="never" />
+        android:showAsAction="never"
+        android:title="@string/menuClearLog" />
+    <item
+        android:id="@+id/item_word_wrap"
+        android:checkable="true"
+        android:checked="false"
+        android:title="@string/menu_enable_word_wrap" />
 
 </menu>
