[app] Optimize module and app list loading (#1401)
Co-authored-by: LoveSy <shana@zju.edu.cn>

--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -73,7 +73,7 @@
             android:layout_height="match_parent"
             android:id="@+id/swipeRefreshLayout">
 
-            <org.lsposed.manager.ui.widget.StatefulRecyclerView
+            <org.lsposed.manager.ui.widget.EmptyStateRecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
