--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -83,5 +83,6 @@
         android:contentDescription="@string/add_module_to_user"
         android:src="@drawable/ic_baseline_add_24"
         android:visibility="gone"
+        app:layout_behavior="@string/hide_bottom_view_on_scroll_behavior"
         app:layout_fitsSystemWindowsInsets="bottom" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
