--- a/app/src/main/res/layout/dialog_title.xml
+++ b/app/src/main/res/layout/dialog_title.xml
@@ -14,24 +14,12 @@
   ~ You should have received a copy of the GNU General Public License
   ~ along with LSPosed.  If not, see <https://www.gnu.org/licenses/>.
   ~
-  ~ Copyright (C) 2020 EdXposed Contributors
   ~ Copyright (C) 2021 LSPosed Contributors
   -->
-<resources xmlns:tools="http://schemas.android.com/tools" tools:keep="@string/xposed_module_updated_notification_*,@string/module_is_not_activated_*">
-    <!-- MainActivity -->
-    <string name="info">Info</string>
-    <string name="Modules">Modules</string>
-    <plurals name="modules_enabled_count">
-        <item quantity="one">%d module enabled</item>
-        <item quantity="other">%d modules enabled</item>
-    </plurals>
-    <!-- LogsActivity -->
-    <!-- Notification -->
-    <!-- ModulesActivity -->
-    <!-- AppListActivity -->
-    <!-- ModulesActivity and AppListActivity -->
-    <!-- SettingsActivity -->
-    <!-- Module Repo -->
-    <!-- CrashReportActivity -->
-    <!-- Colors -->
-</resources>
+<com.google.android.material.textview.MaterialTextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/title"
+    style="@style/MaterialAlertDialog.Material3.Title.Text.CenterStacked"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="?attr/dialogPreferredPadding"
+    android:paddingBottom="?attr/dialogPreferredPadding" />
